<resources>
    <string name="app_name">Terminal Grupar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="dni_enter_dni">Ingrese su DNI</string>
    <string name="dni_enter_pan">Ingrese los 8 &#0250;ltimos d&#0237;gitos de tu tarjeta</string>
    <string name="dni_button_1">1</string>
    <string name="dni_button_2">2</string>
    <string name="dni_button_3">3</string>
    <string name="dni_button_4">4</string>
    <string name="dni_button_5">5</string>
    <string name="dni_button_6">6</string>
    <string name="dni_button_7">7</string>
    <string name="dni_button_8">8</string>
    <string name="dni_button_9">9</string>
    <string name="dni_button_0">0</string>
    <string name="dni_button_saldo">Ver Saldo</string>
    <string name="dni_button_resumen">Ver Resumen</string>
    <string name="dni_button_reclamo">Reclamo</string>
    <string name="dni_button_borrar">Borrar</string>


    <string name="form_title">Ingrese su reclamo</string>
    <string name="form_back">Volver</string>
    <string name="form_send">Enviar</string>

    <string name="data_sheet_button_print">Imprimir</string>
    <string name="data_sheet_button_back">Volver</string>

</resources>
