<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">
    <TextView
        android:id="@+id/dni_enter_dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/dni_enter_dni"
        android:textSize="@dimen/dni_display_font_size"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/statement_dni"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_rectangle"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="@dimen/dni_display_font_size"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dni_1"
            style="@style/btnStyleGrupar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/dni_button_1"
            android:textSize="@dimen/dni_button_font_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dni_2"
            style="@style/btnStyleGrupar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/dni_button_2"
            android:textSize="@dimen/dni_button_font_size"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/dni_3"
            style="@style/btnStyleGrupar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/dni_button_3"
            android:textSize="@dimen/dni_button_font_size"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/dni_4"
            style="@style/btnStyleGrupar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/dni_button_4"
            android:textSize="@dimen/dni_button_font_size"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/dni_5"
            style="@style/btnStyleGrupar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/dni_button_5"
            android:textSize="@dimen/dni_button_font_size"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/dni_6"
            style="@style/btnStyleGrupar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/dni_button_6"
            android:textSize="@dimen/dni_button_font_size"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dni_7"
            style="@style/btnStyleGrupar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/dni_button_7"
            android:textSize="@dimen/dni_button_font_size"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/dni_8"
            style="@style/btnStyleGrupar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/dni_button_8"
            android:textSize="@dimen/dni_button_font_size"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/dni_9"
            style="@style/btnStyleGrupar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/dni_button_9"
            android:textSize="@dimen/dni_button_font_size"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dni_0"
            style="@style/btnStyleGrupar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/dni_button_0"
            android:textSize="@dimen/dni_button_font_size"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/dni_clear"
            style="@style/btnStyleGrupar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/dni_button_borrar"
            android:textSize="@dimen/dni_button_font_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dni_saldo"
            style="@style/btnStyleGrupar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/dni_button_saldo"
            android:textSize="@dimen/dni_button_text_font_size"/>

        <Button
            android:id="@+id/dni_resumen"
            style="@style/btnStyleGrupar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/dni_button_resumen"
            android:textSize="@dimen/dni_button_text_font_size"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dni_reclamo"
            style="@style/btnStyleGrupar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/dni_button_reclamo"
            android:textSize="@dimen/dni_button_text_font_size"/>


    </LinearLayout>


</LinearLayout>